@@ -1,5 +1,7 @@
 11/03/2009
 - fixed parser error on objects with special smarty vars
+- fixed file dependency for {incude} inside {block} tag
+- fixed not compiling on non existing compiled templates when compile_check = false
 
 11/02/2009
 - added neq,lte,gte,mod as aliases to if conditions 
